# IFJ2023_Swift

./: CMakeLists.txt  IFJ2023_Swift  Makefile
IO/: input.txt  output.txt
src/: main.c
src/codegen/: codegen.c  codegen.h
src/codegen/AddressTAble/: address_table.c  address_table.h
src/codegen/AddressTable/: address_table.c  address_table.h
src/codegen/inter_code/: inter_code.c  inter_code.h
src/model/error/: error.c  error.h
src/model/grammar/: grammar.c  grammar.h
src/model/grammar/rule/: grammar_rule.c  grammar_rule.h
src/model/grammar/token/: grammar_token.c  grammar_token.h
src/model/symtable/: symtable.c  symtable.h
src/model/token/: token.c  token.h
src/parser/: parser.c  parser.h
src/parser/config/: config_parser.c  config_parser.h
src/parser/config/key/: config_parser_key.c  config_parser_key.h
src/parser/config/parse_fn/: parse_fn_configs.h
src/parser/ll_parser/: ll_parser.c  ll_parser.h
src/parser/precedence_parser/: precedence_parser.c  precedence_parser.h
src/parser/sem_analys/: sem_analys.c  sem_analys.h
src/scanner/: scanner.c  scanner.h  scanner_configs.c
src/scanner/configs/: conditions_configs.c  cycle_configs.c  general_type_configs.c  id_configs.c  ifj23_swift_configurator.h  math_operations_configs.c  special_symbols_configs.c  type_configs.c  unwraps_configs.c  utils_configs.c  value_configs.c
src/structures/automata/: automata.c  automata.h
src/structures/hashmap/: hashmap.c  hashmap.h  hashtable.c  hashtable.h
src/structures/string/: string.c  string.h
src/structures/vector/: vector.c  vector.h  vector_t.h
src/test/automata_test/: automata_test.c
src/test/codegen_test/: codegen_test.c  codegen_test.h
src/test/grammar_test/: grammar_test.c
src/test/parser_test/: parser-test.c
src/test/parser_test/config/: config_test.c  config_test.h
src/test/parser_test/key/: key_test.c
src/test/scanner_test/: scanner-test.c  scanner_test.h
src/utils/: logger.h  util.c  util.h
